--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -22,7 +22,8 @@
                <mat-drawer-content class="content animated fadeIn">
                     <div class="content-head">
                          <div class="content-title">
-                              <h1>Create User</h1>
+                              
+                              <h1>{{ 'altaUser.titulo' | translate }}</h1>
                               <p>The new informa4on will be check to maintain database integrity</p>
                          </div>
                          <div class="content-progress">
