--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,8 +9,9 @@
                <div class="wrapper-right animated fadeIn">
                          <!-- <app-login></app-login>  -->
                          <div class="example-form" >
-                                   <h4>AgileThought</h4>
-                                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. 
+                                   <!-- <h4>AgileThought</h4> -->
+                                   <h4>{{ 'principal.titulo' | translate }}</h4>
+                                   <p>{{ 'principal.texto' | translate }}
                                    </p>
                                         <!-- <span>Create an acount </span>
                                    <p>New to Agile Thought <span>Create an acount </span></p> -->
