--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -53,6 +53,10 @@
       
       <a *ngIf="Islogged" mat-list-item >About Us</a>
       <a *ngIf="Islogged"  mat-list-item >Contact</a>
+
+      <button [ngClass]="{'active': botonLan()  === true}" (click)="cambiarLenguaje('es')">Español</button>
+
+       <button [ngClass]="{'active': botonLan() === false}" (click)="cambiarLenguaje('en')">Inglés</button>
       <!-- {{ Islogged }} -->
     </mat-toolbar>
     <ng-content>
