--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -11,7 +11,7 @@
 
 
           <div class="example-form animated fadeIn">
-               <h4>AgileThought</h4>
+                    <h4>{{ 'principal.titulo' | translate }}</h4>
                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. 
                </p>
                     <!-- <span>Create an acount </span>
