--- a/src/app/abc-atta/abc-atta.component.scss
+++ b/src/app/abc-atta/abc-atta.component.scss
@@ -57,3 +57,70 @@
    
    
    
+
+.mat-form-field {
+     margin-top: 16px;
+}
+.form-row{
+     display: flex;
+     width: 100%;
+     justify-content: space-between;
+     padding-top: 50px;
+     &.align-left{
+          justify-content: flex-end;
+          .cont-text{
+               display:flex;
+               justify-content: center;
+               align-items: flex-end;
+               p{
+                    margin: 0;
+               }
+          }
+     }
+     .cont-input{
+          flex-basis: 30%;
+          mat-form-field{
+               width: 100%;
+          } 
+          // &:nth-child(1){
+          //      margin-right: 30px;
+          //      outline: 1px solid red;
+          // }
+          // &:nth-child(2){
+          //      margin-right: 30px;
+          //      outline: 1px solid red;
+          // }
+     }
+     .cont-buttons{
+          display: flex;
+          justify-content: flex-end;
+          button{
+               width: 115px;
+               height: 50px;
+               &:nth-child(1){
+                    margin-left: 30px;
+                    margin-right: 30px;
+               }
+          }
+     }
+}
+
+
+.titulo{
+     height: 40px;
+     width:300px;
+     outline: 3px solid blue;
+
+}
+::ng-deep .mat-horizontal-stepper-header-container {
+     order: solid 1px red;
+    width: 30%;
+    position: relative;
+    right: -70%;
+
+   }
+   
+::ng-deep mat-stepper-horizontal, mat-stepper-horizontal {
+border: dashed 10px blue; 
+padding: 1em;
+}
