--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,51 +18,167 @@
                <p><button mat-button>Parmeters</button></p>
                <!-- <button mat-button color="primary">Primary</button>
                     <button mat-button color="accent">Accent</button> -->
-               </mat-drawer>
-               <mat-drawer-content class="content animated fadeIn">
+          </mat-drawer>
+          <mat-drawer-content class="content animated fadeIn" style="position: relative">
+               <div class="contenedor-prin" style="outline: 10px solid red">
                     <div class="content-head">
-                         <div class="content-title">
-                              
-                              <h1>{{ 'altaUser.titulo' | translate }}</h1>
-                              <p>The new informa4on will be check to maintain database integrity</p>
+                              <div class="content-title">
+                                   
+                                   <h1>{{ 'altaUser.titulo' | translate }}</h1>
+                                   <p>The new informa4on will be check to maintain database integrity</p>
+                              </div>
+                              <div class="content-progress">
+                                   progress
+                                   <button (click)="salir()">  Salir  </button>
                          </div>
-                         <div class="content-progress">
-                              progress
-                              <button (click)="salir()">  Salir  </button>
                     </div>
-               </div>
-               <div class="content-body">
-                         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+                    <div class="content-body">
+                              <!-- <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+     
+                                        
+                                        <ng-container matColumnDef="position">
+                                          <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
+                                          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                                        </ng-container>
+                                      
+                                        <ng-container matColumnDef="name">
+                                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                                          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                                        </ng-container>
+                                      
+                                        <ng-container matColumnDef="weight">
+                                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Weight </th>
+                                          <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+                                        </ng-container>
+                                      
+                                        <ng-container matColumnDef="symbol">
+                                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
+                                          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                                        </ng-container>
+                                      
+                                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                              </table> -->
+     
+     
+     
+     
+                              <ng-container >
+                                   <div>
+                                       <mat-form-field *ngFor="let filter of filterSelectObj" style="margin-left: 15px;">
+                                         <mat-label>Filter {{filter.name}}</mat-label>
+                                         <select matNativeControl name="{{filter.columnProp}}" [(ngModel)]="filter.modelValue"
+                                           (change)="filterChange(filter,$event)">
+                                           <option value="">-- Select {{filter.name}} --</option>
+                                           <option [value]="item" *ngFor="let item of filter.options">{{item}}</option>
+                                         </select>
+                                       </mat-form-field>
+                                       &nbsp;
+                                       <button mat-flat-button color="warn" (click)="resetFilters()">Reset</button>
+                                   </div>
+                                     
+                                   <table mat-table [dataSource]="dataSource" matSort>
+                                   
+                                       <ng-container matColumnDef="select">
+                                           <mat-header-cell *matHeaderCellDef>
+                                             <mat-checkbox (change)="$event ? masterToggle() : null"
+                                                           [checked]="selection.hasValue() && isAllSelected()"
+                                                           [indeterminate]="selection.hasValue() && !isAllSelected()">
+                                             </mat-checkbox>
+                                           </mat-header-cell>
+                                           <mat-cell *matCellDef="let row">
+                                             <mat-checkbox (click)="$event.stopPropagation()"
+                                                           (change)="$event ? selection.toggle(row) : null"
+                                                           [checked]="selection.isSelected(row)">
+                                             </mat-checkbox>
+                                           </mat-cell>
+                                       </ng-container>
+                                   
+                                     <ng-container matColumnDef="id">
+                                       <mat-header-cell *matHeaderCellDef mat-sort-header> id </mat-header-cell>
+                                       <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
+                                     </ng-container>
+                                   
+                                     <ng-container matColumnDef="name" >
+                                       <mat-header-cell *matHeaderCellDef mat-sort-header> name </mat-header-cell>
+                                       <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+                                     </ng-container>
+                                   
+                                     <ng-container matColumnDef="username">
+                                       <mat-header-cell *matHeaderCellDef mat-sort-header> username </mat-header-cell>
+                                       <mat-cell *matCellDef="let element"> {{element.username}} </mat-cell>
+                                     </ng-container>
+                                   
+                                     <ng-container matColumnDef="email">
+                                       <mat-header-cell *matHeaderCellDef mat-sort-header> email </mat-header-cell>
+                                       <mat-cell *matCellDef="let element"> {{element.email}} </mat-cell>
+                                     </ng-container>
+                                   
+                                     <ng-container matColumnDef="phone">
+                                       <mat-header-cell *matHeaderCellDef mat-sort-header> phone </mat-header-cell>
+                                       <mat-cell *matCellDef="let element"> {{element.phone}} </mat-cell>
+                                     </ng-container>
+                                   
+                                     <ng-container matColumnDef="website">
+                                       <mat-header-cell *matHeaderCellDef mat-sort-header> website </mat-header-cell>
+                                       <mat-cell *matCellDef="let element"> {{element.website}} </mat-cell>
+                                     </ng-container>
+                           
+                                     
+                           
+                                   
+                                     <ng-container matColumnDef="status">
+                                       <mat-header-cell *matHeaderCellDef mat-sort-header> status </mat-header-cell>
+                                       <mat-cell *matCellDef="let element" > {{element.status}} </mat-cell>
+                                     </ng-container>
+                           
+                                     <ng-container matColumnDef="options">
+                                         <mat-header-cell *matHeaderCellDef> Options </mat-header-cell>
+                                         <mat-cell *matCellDef="let element">
+                                           <!-- <button (click)="deleteRecord(element.id)">Delete</button> -->
+                                           <button (click)="editRecord(element.id)">Edit</button>
+                                           
+                                         </mat-cell>
+                                       </ng-container>
+                                     
+                                   
+                                   
+                                   
+                                   
+                                     <mat-header-row *matHeaderRowDef="displayedColumns;"></mat-header-row >
+                                     <mat-row *matRowDef="let row; columns: displayedColumns;"(click)="selection.toggle(row)"></mat-row>
+                                   
+                                   </table>
+                                   
+                                   
+                                   
+                                   <!-- <mat-paginator [pageSize]="5" [pageSizeOptions]="[2, 3, 4, 5, 6]">
+                                   </mat-paginator> -->
+                                   
+                           
+                                   <button mat-flat-button color="warn" (click)="sendFileInterrupt()">datos</button>
+                                   
+                                   
+                                   <pre>
+                                       selection.hasValue(): {{selection.hasValue()}}
+                                       isAllSelected(): {{isAllSelected()}}
+                                   
+                                       {{ selection }}
+                                     </pre>
+                           </ng-container>
+                           
+                           
+                           
+                           
+     
+     
+                                      
+                    </div>
 
-                                   <!-- Position Column -->
-                                   <ng-container matColumnDef="position">
-                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-                                     <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-                                   </ng-container>
-                                 
-                                   <!-- Name Column -->
-                                   <ng-container matColumnDef="name">
-                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                                     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-                                   </ng-container>
-                                 
-                                   <!-- Weight Column -->
-                                   <ng-container matColumnDef="weight">
-                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Weight </th>
-                                     <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-                                   </ng-container>
-                                 
-                                   <!-- Symbol Column -->
-                                   <ng-container matColumnDef="symbol">
-                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
-                                     <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-                                   </ng-container>
-                                 
-                                   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                                   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                                 </table>
-                                 
                </div>
-          </mat-drawer-content> 
+
+
+               <app-right-navbar [childMessage]="parentMessage" [activeNav]="activeNav"  (seCierra)="cambiar($event)" ></app-right-navbar> 
+          </mat-drawer-content>
      </mat-drawer-container>
 </div>
