--- a/src/app/form-alta/form-alta.component.scss
+++ b/src/app/form-alta/form-alta.component.scss
@@ -5,7 +5,7 @@
      display: flex;
      width: 100%;
      justify-content: space-between;
-     padding-top: 50px;
+     // padding-top: 50px;
      &.align-left{
           justify-content: flex-end;
           .cont-text{
@@ -21,15 +21,7 @@
           flex-basis: 30%;
           mat-form-field{
                width: 100%;
-          } 
-          // &:nth-child(1){
-          //      margin-right: 30px;
-          //      outline: 1px solid red;
-          // }
-          // &:nth-child(2){
-          //      margin-right: 30px;
-          //      outline: 1px solid red;
-          // }
+          }
      }
      .cont-buttons{
           display: flex;
