--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,12 +16,13 @@
                <p><button mat-button routerLink="/abc-atta"  >ABC ATTA</button></p>
                <p><button mat-button>Search</button></p>
                <p><button mat-button>Parmeters</button></p>
+               <button (click)="salir()">  Salir  </button>
                <!-- <button mat-button color="primary">Primary</button>
                     <button mat-button color="accent">Accent</button> -->
           </mat-drawer>
           <mat-drawer-content class="content animated fadeIn" style="position: relative">
                <div class="contenedor-prin" style="outline: 10px solid red">
-                    <div class="content-head">
+                    <!-- <div class="content-head">
                               <div class="content-title">
                                    
                                    <h1>{{ 'altaUser.titulo' | translate }}</h1>
@@ -29,52 +30,52 @@
                               </div>
                               <div class="content-progress">
                                    progress
-                                   <button (click)="salir()">  Salir  </button>
                          </div>
-                    </div>
+                    </div> -->
                     <div class="content-body">
-                              <!-- <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-     
-                                        
-                                        <ng-container matColumnDef="position">
-                                          <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-                                          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-                                        </ng-container>
-                                      
-                                        <ng-container matColumnDef="name">
-                                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                                          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-                                        </ng-container>
-                                      
-                                        <ng-container matColumnDef="weight">
-                                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Weight </th>
-                                          <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-                                        </ng-container>
-                                      
-                                        <ng-container matColumnDef="symbol">
-                                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
-                                          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-                                        </ng-container>
-                                      
-                                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                              </table> -->
-     
-     
-     
-     
                               <ng-container >
-                                   <div>
-                                       <mat-form-field *ngFor="let filter of filterSelectObj" style="margin-left: 15px;">
-                                         <mat-label>Filter {{filter.name}}</mat-label>
-                                         <select matNativeControl name="{{filter.columnProp}}" [(ngModel)]="filter.modelValue"
-                                           (change)="filterChange(filter,$event)">
-                                           <option value="">-- Select {{filter.name}} --</option>
-                                           <option [value]="item" *ngFor="let item of filter.options">{{item}}</option>
-                                         </select>
-                                       </mat-form-field>
-                                       &nbsp;
-                                       <button mat-flat-button color="warn" (click)="resetFilters()">Reset</button>
+                                   <div class="filtro">
+                                        <div class="cont-chips-title">
+                                             <h2>{{ 'dashboard.titulo' | translate }}</h2>
+                                        </div>
+                                        <div class="cont-chips-prin">
+                                             <div class="cont-chips-cont">
+                                                  <mat-form-field class="chip-list">
+                                                       <mat-chip-list #chipList >
+                                                            <mat-chip  *ngIf="varChipIdUser"  [selectable]="selectable"
+                                                                       [removable]="removable" (removed)="removableChipIdUser()">
+                                                            {{ varChipIdUser }}
+                                                            <mat-icon matChipRemove *ngIf="varChipIdUser">cancel</mat-icon>
+                                                            </mat-chip>
+                                                            <mat-chip  *ngIf="varChipStatus"  [selectable]="selectable"
+                                                                      [removable]="removable" (removed)="removableChipStatus()">
+                                                            {{ varChipStatus }}
+                                                            <mat-icon matChipRemove *ngIf="varChipStatus">cancel</mat-icon>
+                                                            </mat-chip>
+                                                       </mat-chip-list>
+                                                  </mat-form-field>   
+                                             </div>
+                                             <div class="cont-chips-button">
+                                                  <button mat-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
+                                             </div>
+                                        </div>
+                                        <mat-menu #menu="matMenu">
+                                             <div class="menu-per"  (click) = "$event.stopPropagation()">
+                                             <mat-form-field *ngFor="let filter of filterSelectObj" style="margin-left: 15px;">
+                                                   <mat-label>Filter {{filter.name}}</mat-label>
+                                                   <select matNativeControl name="{{filter.columnProp}}" [(ngModel)]="filter.modelValue"
+                                                     (change)="filterChange(filter,$event)">
+                                                     <option value="">-- Select {{filter.name}} --</option>
+                                                     <option [value]="item" *ngFor="let item of filter.options">{{item}}</option>
+                                                   </select>
+                                                 </mat-form-field>
+
+                                             </div>          
+                                        </mat-menu>
+
+
+                                       
+                                       <!-- <button mat-flat-button color="warn" (click)="resetFilters()">Reset</button> -->
                                    </div>
                                      
                                    <table mat-table [dataSource]="dataSource" matSort>
@@ -93,36 +94,36 @@
                                              </mat-checkbox>
                                            </mat-cell>
                                        </ng-container>
+                                       <ng-container matColumnDef="name" >
+                                         <mat-header-cell *matHeaderCellDef mat-sort-header> name </mat-header-cell>
+                                         <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+                                       </ng-container>
                                    
                                      <ng-container matColumnDef="id">
                                        <mat-header-cell *matHeaderCellDef mat-sort-header> id </mat-header-cell>
                                        <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
                                      </ng-container>
                                    
-                                     <ng-container matColumnDef="name" >
-                                       <mat-header-cell *matHeaderCellDef mat-sort-header> name </mat-header-cell>
-                                       <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
-                                     </ng-container>
                                    
-                                     <ng-container matColumnDef="username">
+                                     <!-- <ng-container matColumnDef="username">
                                        <mat-header-cell *matHeaderCellDef mat-sort-header> username </mat-header-cell>
                                        <mat-cell *matCellDef="let element"> {{element.username}} </mat-cell>
-                                     </ng-container>
+                                     </ng-container> -->
                                    
-                                     <ng-container matColumnDef="email">
+                                     <!-- <ng-container matColumnDef="email">
                                        <mat-header-cell *matHeaderCellDef mat-sort-header> email </mat-header-cell>
                                        <mat-cell *matCellDef="let element"> {{element.email}} </mat-cell>
-                                     </ng-container>
+                                     </ng-container> -->
                                    
-                                     <ng-container matColumnDef="phone">
+                                     <!-- <ng-container matColumnDef="phone">
                                        <mat-header-cell *matHeaderCellDef mat-sort-header> phone </mat-header-cell>
                                        <mat-cell *matCellDef="let element"> {{element.phone}} </mat-cell>
-                                     </ng-container>
+                                     </ng-container> -->
                                    
-                                     <ng-container matColumnDef="website">
+                                     <!-- <ng-container matColumnDef="website">
                                        <mat-header-cell *matHeaderCellDef mat-sort-header> website </mat-header-cell>
                                        <mat-cell *matCellDef="let element"> {{element.website}} </mat-cell>
-                                     </ng-container>
+                                     </ng-container> -->
                            
                                      
                            
@@ -136,10 +137,21 @@
                                          <mat-header-cell *matHeaderCellDef> Options </mat-header-cell>
                                          <mat-cell *matCellDef="let element">
                                            <!-- <button (click)="deleteRecord(element.id)">Delete</button> -->
-                                           <button (click)="editRecord(element.id)">Edit</button>
+                                           <button (click)="editRecord(element.id, 'blacklist')">BLC</button>
+                                           
+                                           <button (click)="editRecord(element.id, 'contacto')">CNT</button>
+                                           
+                                           <button (click)="editRecord(element.id, 'reasignar')">REA</button>
+                                           
+                                           <button (click)="editRecord(element.id, 'status')">STS</button>
                                            
                                          </mat-cell>
                                        </ng-container>
+
+                                       <!-- <ng-container matColumnDef="status">
+                                             <mat-header-cell *matHeaderCellDef mat-sort-header> status </mat-header-cell>
+                                             <mat-cell *matCellDef="let element" > {{element.status}} </mat-cell>
+                                           </ng-container> -->
                                      
                                    
                                    
