--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,31 +8,31 @@ body { margin: 0; font-family: 'Roboto', sans-serif;}
 
 .swal2-styled.swal2-confirm{
 
-     background-color: #673ab7 !important;
-     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
-     margin-bottom: 30px !important;
-     margin-top: 30px !important;
-     width: 100% !important;
-     box-sizing: border-box !important;
-    position: relative !important;
-    -webkit-user-select: none !important;
-    -moz-user-select: none !important;
-    -ms-user-select: none !important;
-    user-select: none !important;
-    cursor: pointer !important;
-    outline: none !important;
-    border: none !important;
-    -webkit-tap-highlight-color: transparent !important;
-    display: inline-block !important;
-    white-space: nowrap !important;
-    text-decoration: none !important;
-    vertical-align: baseline !important;
-    text-align: center !important;
-    margin: 0 !important;
-    min-width: 64px !important;
-    line-height: 36px !important;
-    padding: 0 16px !important;
-    border-radius: 4px !important;
+    //  background-color: #673ab7 !important;
+    //  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
+    //  margin-bottom: 30px !important;
+    //  margin-top: 30px !important;
+    //  width: 100% !important;
+    //  box-sizing: border-box !important;
+    // position: relative !important;
+    // -webkit-user-select: none !important;
+    // -moz-user-select: none !important;
+    // -ms-user-select: none !important;
+    // user-select: none !important;
+    // cursor: pointer !important;
+    // outline: none !important;
+    // border: none !important;
+    // -webkit-tap-highlight-color: transparent !important;
+    // display: inline-block !important;
+    // white-space: nowrap !important;
+    // text-decoration: none !important;
+    // vertical-align: baseline !important;
+    // text-align: center !important;
+    // margin: 0 !important;
+    // min-width: 64px !important;
+    // line-height: 36px !important;
+    // padding: 0 16px !important;
+    // border-radius: 4px !important;
  
  }
 
